--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
 # AWS Keys & Other Confidential Files are not to be uploaded
 # Project 4 - Cloud Lake with Spark(AWS)/
-Project 4 - Sent for Review/
+Project 6 - Data Pipelines/
