Submitted Project Capstone, DataWrangling - Corrected some .head() entires as it had .head(100) for some

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 # AWS Keys & Other Confidential Files are not to be uploaded
 # Project 4 - Cloud Lake with Spark(AWS)/
 # Project 6 - Data Pipelines/
+# Project 7 - Capstone/
+.ipynb_checkpoints
